<resources>
    <string name="app_name">New Trial</string>\
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="updates">Updates</string>
    <string name="settings">Setting</string>
    <string name="developer_passcode">Developer Passcode</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="close">Close</string>
    <string name="gallery">Gallery</string>
    <string name="contact_us">Contact Us</string>
</resources>