<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:gravity="center_vertical|center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sideBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:minWidth="200dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:background="@drawable/side_bar_bg"
            android:textSize="20sp"
            android:text="@string/gallery"
            android:padding="15sp"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:text="@string/contact_us"
            android:padding="15sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sideBar"/>



</androidx.constraintlayout.widget.ConstraintLayout>